@@ -1,4 +1,5 @@
 v0.13
+	* ADD : Add a button to the Slippy map allowing to go to the current viewport.
 	* ADD : Outline coastlines
 	* ADD : Include build of translations during make
 	* ADD : Use a builtin shapefile of the world as a background 
